@@ -4,6 +4,9 @@
 
  Changes between 1.0.0d and 1.0.1  [xx XXX xxxx]
 
+  *) Add similar low level API blocking to ciphers.
+     [Steve Henson]
+
   *) Low level digest APIs are not approved in FIPS mode: any attempt
      to use these will cause a fatal error. Applications that *really* want
      to use them can use the private_* version instead.
